#task-7 add test, add squirrel
