# internal/entity/roadmap.go
@@ -1,15 +1,19 @@
 package entity
 
-import "fmt"
+import (
+	"fmt"
+	"time"
+)
 
 type Roadmap struct {
-	Id     uint64
-	UserId uint64
-	Link   string
+	Id        uint64
+	UserId    uint64
+	Link      string
+	CreatedAt time.Time
 }
 
-func NewRoadMap(id, userId uint64, link string) *Roadmap {
-	return &Roadmap{Id: id, UserId: userId, Link: link}
+func NewRoadMap(id, userId uint64, link string, createdAt time.Time) *Roadmap {
+	return &Roadmap{Id: id, UserId: userId, Link: link, CreatedAt: createdAt}
 }
 
 func (r *Roadmap) String() string {
