# swagger/api.swagger.json
@@ -192,6 +192,10 @@
         },
         "link": {
           "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
